--- a/assets/style/basic.css
+++ b/assets/style/basic.css
@@ -1,13 +1,16 @@
 :root{
-    --color-text-invert: #080808;
-    --color-text: #f8f8f8;
+    --color-text-invert: #111111;
+    --color-text: #fff;
 }
 body{
     background-color: var(--color-text-invert);
     color: var(--color-text);
 }
-
-button {
+button{
+    background-color: var(--color-text-invert);
+    color: var(--color-text);
+}
+.btn {
     border: solid 2px #444;
     background-color: #1b1b1b;
     color: white;
@@ -15,9 +18,7 @@ button {
     cursor: pointer;
     transition-property: background-color, border, transform, box-shadow;
     transition-duration: 0.15s;
-}
 
-.btn {
     cursor: pointer;
     font-size: 12px;
     max-width: 250px;
@@ -70,4 +71,51 @@ button {
 
 .vol-dis{
     font-size: 32px;
+}
+.soft {
+    color: hsl(237, 15%, 47%);
+    font-weight: bold;
+    text-shadow: 0px 1px 0px hsl(252, 19%, 57%);
+    pointer-events: none;
+}
+
+.mm3btn{
+    background-color: #440;
+    border-color: #880;
+}
+.mm3btn:hover{
+    background-color: #550;
+    border-color: #aa0;
+}
+.mm3btn[disabled]{
+    background-color: #220;
+    border-color: #440;
+}
+.mm3text{ 
+    color: #dd0;
+}
+
+.mm3upg {
+    width: 184px;
+    height: 136px;
+
+    color: #ffffff;
+    border: 2px solid #dd0;
+    font-size: 16px;
+    text-decoration: none;
+    cursor: pointer;
+}
+.unlocked{
+    background: #080;
+}
+
+.chalpl0{
+    width: 220px;
+    height: 124px;
+    color: #ffffff;
+    border: 4px solid #ffffff;
+    font-family: MonospaceTypewriter;
+    font-size: 16px;
+    text-decoration: none;
+    cursor: pointer;
 }
