--- a/assets/style/basic.css
+++ b/assets/style/basic.css
@@ -110,12 +110,47 @@ button{
 }
 
 .chalpl0{
-    width: 220px;
+    width: 200px;
     height: 124px;
     color: #ffffff;
     border: 4px solid #ffffff;
     font-family: MonospaceTypewriter;
-    font-size: 16px;
+    font-size: 13px;
     text-decoration: none;
     cursor: pointer;
+}
+.inchal{
+    background: #558;
+}
+
+
+@keyframes a-tesseract-shift-dark {
+    0% { box-shadow: 1.5rem 1.5rem 0.5rem white, -1.5rem -1.5rem 0.5rem white; }
+    50% { box-shadow: 1.5rem -1.5rem 0.5rem white, -1.5rem 1.5rem 0.5rem white; }
+    100% { box-shadow: -1.5rem -1.5rem 0.5rem white, 1.5rem 1.5rem 0.5rem white; }
+  }
+
+@keyframes bigcrunch {
+    0%, 100% {
+        transform: scale(1);
+        filter: blur(0);
+    }
+    50% {
+        transform: scale(0);
+        filter: blur(5px);
+    }
+}
+
+.breakable{
+    border-color: var(--color-text-invert);
+    background-color: var(--color-text-invert);
+}
+
+.breakable:hover{
+    border-color: var(--color-text-invert);
+    background-color: var(--color-text-invert);
+}
+.breakable[disabled]{
+    border-color: var(--color-text-invert);
+    background-color: var(--color-text-invert);
 }
